<resources>
    <string name="app_name">Project2test</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="hint">DOB</string>
    <string name="hintpw">Password</string>
    <string name="select_date_of_birth">SELECT DATE OF BIRTH</string>
    <string name="s">S</string>
    <string name="m">M</string>
    <string name="l">L</string>
    <string name="xl">XL</string>
    <string name="xxl">XXL</string>
    <string name="clear">CLEAR</string>
    <string name="emailhnt">Email</string>
    <string name="full_name">Full Name</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="proceed_to_checkout">Proceed to checkout</string>
    <string name="details">Details</string>
    <string name="textview">TextView</string>

    <string name="pay">Pay</string>
    <string name="next_page">Next Page</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="detail">detail</string>
    <string name="send_message">SEND MESSAGE</string>
    <string name="_0">0</string>
    <string name="ratings">RATINGS</string>
    <string name="quantity">Quantity</string>
    <string name="enter_name">Enter Name</string>
    <string name="ratingss">Ratings</string>
    <string name="quantitys">Quantity</string>
    <string name="size">Size</string>
    <string name="age">Age</string>
    <string name="name">Name</string>
    <string name="names">Name</string>
    <string name="card_number">Card number</string>
    <string name="scan">SCAN</string>
    <string name="show_card_number">Show card number</string>
    <string name="mm_yy">MM/YY</string>
    <string name="add_bank">Add bank</string>
    <string name="type_message">type message</string>
    <string name="send_msg">Send MSG</string>
    <string name="friend">Friend</string>
    <string-array name="cardtype">
        <item>Visa</item>
        <item>mastercard</item>
        <item>DISCOVER</item>

    </string-array>
</resources>
